--- a/nightclub-wrapped-app/package.json
+++ b/nightclub-wrapped-app/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
